Fix twitch user icon alignment and disabled video bg

--- a/css/twitch-chat.css
+++ b/css/twitch-chat.css
@@ -41,18 +41,18 @@
     background-position: 0 center;
     background-repeat: no-repeat;
     display: inline-block;
-    vertical-align: bottom;
     height: 18px;
     min-width: 18px;
     width: expression(document.body.clientWidth < $width ? "18px": "auto");
     padding: 0;
     margin-right: 3px;
-    margin-bottom: -1px;
     text-indent: -9999px;
     border-radius: 2px;
     -moz-border-radius: 2px;
     -webkit-border-radius: 2px;
     overflow: hidden;
+    position: relative;
+    top: 3px;
 }
 .turbo {
     background-color: #6441a5;
